--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">RaspberryPiNotificationLamp</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_all_apps">AllAppsActivity</string>
+    <string name="about_title">About</string>
+    <string name="about_desc">Description</string>
+    <string name="menu_title">Notification Lamp Settings</string>
 
 </resources>
