--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">RaspberryPiNotificationLamp</string>
+    <string name="app_name">Notification Lamp</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_all_apps">AllAppsActivity</string>
     <string name="about_title">About</string>
     <string name="about_desc">Description</string>
     <string name="menu_title">Notification Lamp Settings</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
+    <string name="server_dialog_title">Set Server Details</string>
+    <string name="delete">Delete</string>
+    <string name="delete_confirmation">Are you sure you want to delete this selection?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
 </resources>
